Fix width of steps for the dataset wizard so that the wording doesn't wrap

--- a/resources/sass/_bootstrap-steps-variables.scss
+++ b/resources/sass/_bootstrap-steps-variables.scss
@@ -1,7 +1,7 @@
 // Bootstrap Steps Variables
 
 $step-gutter: 1rem !default;
-$step-content-width: 8rem !default;
+$step-content-width: 10rem !default;
 $step-content-padding-top: .5rem !default;
 $step-circle-size: 1.5rem !default;
 $step-circle-border-width: 2px !default;
